@@ -14,6 +14,5 @@ Gem::Specification.new do |s|
 
   s.add_dependency "rack"
   s.add_development_dependency "rspec"
-  s.add_development_dependency "sinatra-flash"
   s.add_development_dependency "tilt"
 end
