@@ -23,7 +23,7 @@
 <li><a href="rdoc/classes/Roda/RodaPlugins/AllVerbs.html">all_verbs</a>: Adds request routing methods for all http verbs.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/DefaultHeaders.html">default_headers</a>: Allows modifying the default headers for responses.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/ErrorHandler.html">error_handler</a>: Adds ability to automatically handle errors raised by the application.</li>
-<li><a href="rdoc/classes/Roda/RodaPlugins/Flash.html">flash</a>: Adds flash handling, using <a href="https://github.com/SFEley/sinatra-flash">sinatra-flash</a>.</li>
+<li><a href="rdoc/classes/Roda/RodaPlugins/Flash.html">flash</a>: Adds flash handling</a>.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/H.html">h</a>: Adds h method for html escaping.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/Halt.html">halt</a>: Augments request halt method for support for setting response status and/or response body.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/HeaderMatchers.html">header_matchers</a>: Adds matchers for hostname, accept, or presence of arbitrary headers.</li>
